feat: refactor promtail role

--- a/templates/docker-compose.yaml.j2
+++ b/templates/docker-compose.yaml.j2
@@ -7,8 +7,9 @@ services:
     volumes:
       - /var/log:/var/log
       - ./promtail-config.yaml:/etc/promtail/promtail-config.yaml
-    command: -config.file=/etc/promtail/promtail-config.yaml
+    command: --config.file=/etc/promtail/promtail-config.yaml
 {% if loki_docker_compose_network is defined %}
     networks:
       - {{ loki_docker_compose_network }}
+    restart: always
 {% endif %}
